# proga2021

./: CMakeLists.txt
task1/: CMakeLists.txt  bird.stl  cylinder.cpp  obj.cpp  tor.cpp  tor2.cpp
task2/: README  animation.cpp
task3/: README  task.py
